@@ -12,6 +12,7 @@ import ru.skillbox.commondto.account.AccountByFilterDto;
 import ru.skillbox.commondto.account.AccountDto;
 import ru.skillbox.commondto.account.AccountRecoveryRq;
 import ru.skillbox.commondto.account.AccountSearchDto;
+import ru.skillbox.userservice.controller.AccountPredicate;
 import ru.skillbox.userservice.exception.AccountAlreadyExistsException;
 import ru.skillbox.userservice.exception.NoSuchAccountException;
 import ru.skillbox.userservice.exception.NotAuthException;
@@ -20,7 +21,9 @@ import ru.skillbox.userservice.model.entity.User;
 import ru.skillbox.userservice.repository.UserRepository;
 import ru.skillbox.userservice.util.BeanUtil;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -33,21 +36,18 @@ public class AccountService {
         return recoveryRequest.getEmail();
     }
 
-    public AccountDto getUserAccount(String userEmail) {
-        User user = userRepository.findByEmail(userEmail).orElseThrow(() -> new NoSuchAccountException("Can't find Account with email: " + userEmail));
-        return userMapper.userToResponse(user.getId(), user);
-    }
-
     @Transactional
-    public AccountDto updateUserAccount(AccountDto accountDto, Long id) {
-        if (accountDto.getId() != null && !accountDto.getId().equals(id))
-            throw new NotAuthException("Can't update Account with id:" + id);
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new NoSuchAccountException("Can't find Account with id:" + id));
-        AccountDto existedAccount = userMapper.userToResponse(id, user);
+    public AccountDto updateUserAccount(AccountDto accountDto, Long authUserId) {
+        if (accountDto.getId() != null && !accountDto.getId().equals(authUserId))
+            throw new NotAuthException("Can't update Account with id:" + authUserId);
+        User user = userRepository.findById(authUserId)
+                .orElseThrow(() -> new NoSuchAccountException("Can't find Account with id:" + authUserId));
+        AccountDto existedAccount = userMapper.userToResponse(authUserId, user);
         BeanUtil.copyNonNullProperties(accountDto, existedAccount);
 
-        return userMapper.userToResponse(id, userRepository.save(userMapper.requestToUser(id, existedAccount)));
+        return userMapper.userToResponse(
+                authUserId,
+                userRepository.save(userMapper.requestToUser(authUserId, existedAccount)));
     }
 
     @Transactional
@@ -72,55 +72,55 @@ public class AccountService {
         }
     }
 
-    public List<AccountDto> getAllAccounts(Pageable page, Long id) {
-        // TODO: когда в репозитории добавим пагинацию - нужно изменить вызов и передавать page
-        List<User> users = userRepository.findAll();
-        return users.stream().map((user) -> userMapper.userToResponse(id, user)).toList();
+    public Page<AccountDto> getAllAccounts(Pageable page, Long authUserId) {
+        List<User> users = userRepository.findAllByIsDeleted(page, false);
+        List<AccountDto> pageList = users.stream().map(user -> userMapper.userToResponse(authUserId, user)).toList();
+        return new PageImpl<>(pageList, page, users.size());
     }
 
     @Transactional
-    public long createAccount(@Valid AccountDto accountDto) {
+    public long createAccount(@Valid AccountDto accountDto, Long authUserId) {
         if (userRepository.findByEmail(accountDto.getEmail()).isPresent()) {
             throw new AccountAlreadyExistsException("Account with such email already registered!");
         }
-        User user = userMapper.requestToUser(accountDto.getId(), accountDto);
+        User user = userMapper.requestToUser(authUserId, accountDto);
         return userRepository.save(user).getId();
     }
 
-    public AccountDto searchAccountByFilter(AccountByFilterDto filterDto) {
-        // logic with DB
-        return AccountDto.builder().build();
+    public List<AccountDto> searchAccountByFilter(AccountByFilterDto filterDto, Long authUserId) {
+        Stream<User> users = userRepository.findAll().stream();
+        AccountSearchDto params = filterDto.getAccountSearchDto();
+        users = users
+                .filter(AccountPredicate.checkIds(params.getIds()))
+                .filter(AccountPredicate.checkFirstName(params.getFirstName()))
+                .filter(AccountPredicate.checkFirstName(params.getLastName()))
+                .filter(AccountPredicate.birthdayBetween(params.getBirthDateFrom(), params.getBirthDateTo()))
+                .filter(AccountPredicate.checkAge(params.getAgeFrom(), params.getAgeTo()));
+        return users.map(user -> userMapper.userToResponse(authUserId, user)).toList();
     }
 
-    public AccountDto getAccountById(Long id) {
+    public AccountDto getAccountById(Long id, Long authUserId) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new NoSuchAccountException("Can't find Account with id: " + id));
-        return userMapper.userToResponse(id, user);
-    }
-
-    public List<AccountDto> searchAccount(AccountSearchDto accountSearchDto, Pageable pageable) {
-        // logic with DB
-        return List.of(AccountDto.builder().build());
+        return userMapper.userToResponse(authUserId, user);
     }
 
     public List<Long> getAllIds() {
-        // logic with DB
-        return List.of();
+        return userRepository.findAll().stream().map(User::getId).toList();
     }
 
-    public List<AccountDto> getAccountIds(Long[] ids, Pageable page) {
-        // logic with DB
-        return List.of();
+    public List<AccountDto> getAccountIds(Long[] ids, Long authUserId) {
+        List<User> users = userRepository.findAll();
+        return users.stream()
+                .filter(user -> Arrays.asList(ids).contains(user.getId()))
+                .map(user -> userMapper.userToResponse(authUserId, user))
+                .toList();
     }
 
     public Page<AccountDto> searchAccount(boolean isDeleted, long authUserId) {
-
         Pageable nextPage = PageRequest.of(0, Integer.MAX_VALUE);
-
         List<User> users = userRepository.findAllByIsDeleted(nextPage, isDeleted);
-
         List<AccountDto> pageList = users.stream().map(user -> userMapper.userToResponse(authUserId, user)).toList();
-
         return new PageImpl<>(pageList, nextPage, users.size());
     }
 }
